option java_package = "mil.nga.giat.geowave.datastore.hbase.query.generated";
option java_outer_classname = "RowCountProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message CountRequest {
}

message CountResponse {
  required int64 count = 1 [default = 0];
}

service RowCountService {
  rpc getRowCount(CountRequest)
    returns (CountResponse);
  rpc getCellCount(CountRequest)
    returns (CountResponse);
}